# Reflect

./: .gitignore  CMakeLists.txt  GENERATE_PROJECT.sh
Reflect/: CMakeLists.txt
Reflect/inc/: Reflect.h  ReflectStatic.h  ReflectStructs.h
Reflect/inc/CodeGenerate/: CodeGenerate.h  CodeGenerateHeader.h  CodeGenerateSource.h
Reflect/inc/Core/: Allocator.h  Core.h  Enums.h  FieldIO.h  Serial.h  Util.h
Reflect/inc/FileParser/: FileParser.h
Reflect/src/CodeGenerate/: CodeGenerate.cpp  CodeGenerateHeader.cpp  CodeGenerateSource.cpp
Reflect/src/Core/: Allocator.cpp  Class.cpp  Enums.cpp  Util.cpp
Reflect/src/FileParser/: FileParser.cpp
Reflect/src/Serial/: Serial.cpp
ReflectDLL/: CMakeLists.txt
ReflectEXE/: CMakeLists.txt
ReflectEXE/src/: main.cpp
ReflectTest/: CMakeLists.txt
ReflectTest/src/: TestStrcuts.Reflect.h  TestStrcuts.ReflectStatic.h  TestStrcuts.h  TestStrcuts.reflect.cpp  TestStrcuts.reflect.h  TestStructs.cpp  main.cpp
Serial/: CMakeLists.txt
Serial/inc/: Serial.h  SerialCodeGenerate.h  SerialCodeGenerateHeader.h  SerialCodeGenerateSource.h
Serial/src/: SerialCodeGenerate.cpp  SerialCodeGenerateHeader.cpp  SerialCodeGenerateSource.cpp
SerialEXE/: CMakeLists.txt
SerialEXE/src/: main.cpp
cmake/: ReflectConfig.cmake.in
