add_library(ReflectDLL SHARED
	${LIB_SOURCE_FILES}
	${LIB_HEADER_FILES}
)

target_include_directories(ReflectDLL
    PUBLIC
		$<INSTALL_INTERFACE:include>
		$<BUILD_INTERFACE:${LIB_INCLUDE_DIR}>
	PRIVATE
        ${LIB_INCLUDE_DIR}
)

target_compile_definitions(ReflectDLL PRIVATE -DPLATFORM_WINDOWS -DREFLECT_DLL_EXPORT)
install(TARGETS ReflectDLL DESTINATION ${CMAKE_INSTALL_PREFIX})