set(TARGET_NAME ReflectDLL)

add_library(${TARGET_NAME} SHARED
	${LIB_SOURCE_FILES}
	${LIB_HEADER_FILES}
)

target_include_directories(${TARGET_NAME}
    PUBLIC
		$<INSTALL_INTERFACE:include>
		$<BUILD_INTERFACE:${LIB_INCLUDE_DIR}>
	PRIVATE
        ${LIB_INCLUDE_DIR}
)

target_compile_definitions(${TARGET_NAME} PRIVATE -DPLATFORM_WINDOWS -DREFLECT_DLL_EXPORT)
