set(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/inc)
file(GLOB SOURCE_FILES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
file(GLOB HEADER_FILES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/inc/*.h)

add_library(Serial STATIC
	${SOURCE_FILES}
	${HEADER_FILES}
)

target_include_directories(Serial
    PUBLIC
		$<INSTALL_INTERFACE:include>
		$<BUILD_INTERFACE:${INCLUDE_DIR}>
	PRIVATE
        ${INCLUDE_DIR}
)

target_link_libraries(Serial Reflect)

install(TARGETS Serial DESTINATION ${CMAKE_INSTALL_PREFIX})
install(DIRECTORY "${INCLUDE_DIR}/"
        DESTINATION "include"
        FILES_MATCHING
        PATTERN "*.*"
)